# Chlorine

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
src/: entry.h  main.cpp
src/UI/: about_dialog.cpp  about_dialog.h  main_application.cpp  main_application.h  main_window.cpp  main_window.h
